--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
+  --primary-color: #3275a8;
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
